--- a/preparation.tex
+++ b/preparation.tex
@@ -27,7 +27,7 @@
     \Theta(x)=\begin{cases}
         1, & x>0\\
         0, & x<0
-    \end{cases}
+    \end{cases}=\lim_{\epsilon\to0^+}\int\frac{i\d\omega}{2\pi}\frac{\exp{-i\omega t}}{\omega+i\epsilon}\label{Theta-definition}
 \end{equation}
 单位元电荷
 \begin{equation}
