--- a/reference.bib
+++ b/reference.bib
@@ -9,7 +9,8 @@
   author={Tom Lancaster and Stephen J. Blundell},
   year={2023},
   publisher={世界图书出版公司},
-  pages={10--17}
+  pages={10--17},
+  chapter={1}
 }
 @book{peskinCausality,
   title={{Introduction to Quantum Field Theory}},
@@ -71,7 +72,7 @@
   title={{Dérivées de Lie des spineurs}},
   journal={Annali di Matematica},
   volume={91},
-  pages={317–395}, 
+  pages={317–-395}, 
   year={1971},
   author={Kosmann, Y}
 }
@@ -81,20 +82,23 @@
   title = {Quantum Field Theory and the Standard Model},
   year = {2014},
   pages={87--89},
+  chapter={7}
 }
 @book{qft-amatuer-interaction-picture,
   title={{Quantum Field Theory for the Gifted Amateur}},
   author={Tom Lancaster and Stephen J. Blundell},
   year={2023},
   publisher={世界图书出版公司},
-  pages={167--169}
+  pages={167--169},
+  chapter={18}
 }
 @book{SchroederClusterExpansion,
   title={{An Introduction to Thermal Physics}},
   author={Daniel V. Schroeder},
   year={2022},
   publisher={Pearson Education Inc.},
-  pages={246--254}
+  pages={246--254},
+  chapter={8}
 }
 @book{LiuChuanIsing,
   title={{热力学与统计物理}},
@@ -109,6 +113,7 @@
   title = {Quantum Field Theory and the Standard Model},
   year = {2014},
   pages={70--72},
+  chapter={6}
 }
 @book{sredinicki-ugammau,
   author = {Mark Srednicki},
@@ -116,4 +121,13 @@
   title = {Quantum Field Theory},
   year = {2007},
   pages={240--241},
+  chapter={38}
+}
+@book{griffthsClifford,
+  title={{粒子物理导论}},
+  author={David J. Griffths(王青译)},
+  year={2021},
+  publisher={机械工业出版社},
+  pages={180--183},
+  chapter={7}
 }
