修订了T变换, 编写了P变换

--- a/preparation.tex
+++ b/preparation.tex
@@ -575,12 +575,18 @@ Lorentz群生成元
 
 然后我们同样可以定义幺正的反线性算符
 \begin{definition}[反线性幺正算符]
-    若反线性算符$U$满足
+    若反线性算符$A$满足
     \begin{equation}
-        UU^\dagger=U^\dagger U=1
+        AA^\dagger=A^\dagger A=1
     \end{equation}
-    则称$U$是幺正算符.
+    则称$A$是幺正算符.
 \end{definition}
+
+我们可以将反线性幺正算符$A$分解为一种特殊的反线性幺正算符$K$与另一个幺正算符$U$的组合, 即
+\begin{equation}
+    A=UK,
+\end{equation}
+其中, 反线性幺正算符$K$满足$K^2=1$.
 
 
 \newpage
